[package]
name = "time-util"
version = "0.1.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/time-util"
repository = "https://github.com/d-e-s-o/time-util.git"
readme = "README.md"
description = """
A crate providing miscellaneous functionality for working with time
stamps.
"""

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.math-util]
version = "0.1"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false

[dev-dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
