[package]
name = "time-util"
version = "0.3.2"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/time-util"
repository = "https://github.com/d-e-s-o/time-util.git"
readme = "README.md"
description = """
A crate providing miscellaneous functionality for working with time
stamps.
"""

[badges]
gitlab = { repository = "d-e-s-o/time-util", branch = "master" }

[features]
math = ["math-util"]
# The following features are not explicitly listed:
# - chrono
# - chrono-tz
# - serde

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]
optional = true

[dependencies.chrono-tz]
version = "0.5.3"
default-features = false
features = ["std"]
optional = true

[dependencies.math-util]
version = "0.1"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dev-dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dev-dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
